[gd_scene load_steps=8 format=2]

[ext_resource path="res://actors/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://utils/state/StateMachine.tscn" type="PackedScene" id=2]
[ext_resource path="res://actors/monsters/porcupine_state/PorcupineStateMachine.gd" type="Script" id=3]
[ext_resource path="res://actors/monsters/bosses/wild_boar/states/roam/RoamSequence.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/monsters/bosses/wild_boar/states/charge/ChargeSequence.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/monsters/porcupine_state/body.png" type="Texture" id=6]
[ext_resource path="res://actors/monsters/porcupine_state/DrawAreas.tscn" type="PackedScene" id=7]


[node name="Porcupine" index="0" groups=[
"monsters",
] instance=ExtResource( 1 )]

[node name="StateMachine" parent="." index="0" instance=ExtResource( 2 )]

script = ExtResource( 3 )

[node name="RoamSequence" parent="StateMachine" index="0" instance=ExtResource( 4 )]

[node name="ChargeSequence" parent="StateMachine" index="1" instance=ExtResource( 5 )]

[node name="Body" parent="Skin" index="0"]

texture = ExtResource( 6 )

[node name="DebugDraw" parent="." index="5" instance=ExtResource( 7 )]


